--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
         uses: apple-actions/download-provisioning-profiles@v1
         with:
           bundle-id: 'com.stash.sdkdemo'
+          profile-type: 'IOS_APP_STORE'
           issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
           api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
           api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
@@ -54,6 +55,15 @@ jobs:
           ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
           echo "=== Available Teams ==="
           xcrun xcodebuild -showBuildSettings | grep DEVELOPMENT_TEAM || echo "No team found"
+
+      - if: inputs.platform == 'iOS'
+        name: Check Bundle ID
+        run: |
+          cd build/iOS/iOS
+          echo "=== Checking Bundle ID ==="
+          xcodebuild -project Unity-iPhone.xcodeproj -target Unity-iPhone -showBuildSettings | grep PRODUCT_BUNDLE_IDENTIFIER
+          echo "=== Available Provisioning Profiles ==="
+          ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
 
       - uses: game-ci/unity-builder@v4
         env:
