--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,8 @@ jobs:
             for profile in "$PROFILES_PATH"/*.mobileprovision; do
               echo "Inspecting $profile"
               security cms -D -i "$profile" | grep -A 3 'TeamIdentifier' || echo "Failed to decode TeamIdentifier"
-              security cms -D -i "$profile" | grep -A 3 'com.apple.application-identifier' || echo "Failed to decode application-identifier"
+              security cms -D -i "$profile" | grep -A 3 -i 'application' || echo "Failed to find application-related fields"
+              security cms -D -i "$profile" | grep -A 3 -i 'bundle' || echo "Failed to find bundle-related fields"
               echo "----------------------------------------"
             done
           else
